Fix two scrollbars showing when overflow

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -8,6 +8,7 @@ html, body {
 
 body {
     background: #f6f9fc;
+    overflow-x: initial;
 
     &.login-page {
         background: #fff;
